*                          Library                                         *
****************************************************************************

QtCore
------

 - foo
    * bar

QtGui
-----

 - QWidget
    * [QTMOBILITY-645] Send WinIdChange event when winId is set to zero.
	  The window handle of a native widget may be set to zero in two
	  situations: (i) temporarily, during reparenting and (ii) during
	  widget destruction.  Previously, no WinIdChange event was sent in
	  either of these cases; now, it is sent in both cases.

QtDBus
------

 - foo
    * bar

QtNetwork
---------

 - foo
    * bar

QtOpenGL
--------

 - foo
    * bar

QtScript
--------

 - foo
    * bar

QtSql
-----

 - foo
    * bar

QtXml
-----

 - foo
    * bar

Qt Plugins
----------

 - foo
    * bar

Third party components
----------------------

 - Updated foo to version 2.3.9.

 - Updated bar to the latest version from baz.org.


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Unix (X11 and Mac OS X)
------------------------------

 - 

Qt for Linux/X11
----------------

 -

Qt for Windows
--------------

 -

Qt for Mac OS X
---------------

 -

Qt for Embedded Linux
---------------------

 -

DirectFB
--------

 -

Qt for Windows CE
-----------------

 -

****************************************************************************
*                          Tools                                           *
****************************************************************************

 - Designer
   * foo

 - qdoc3
   * bar

 - Linguist
   * baz

****************************************************************************
* Important Behavior Changes *
****************************************************************************

 -
